--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -1084,7 +1084,7 @@ Plugin.prototype = {
       // update the active list item
       this.countryListItems.removeClass("active");
       if (countryCode) {
-        this.countryListItems.filter('.country[data-country-code="'+countryCode+'"]').addClass("active");
+        this.countryListItems.filter('.country[data-country-code="'+countryCode+'"]').first().addClass("active");
       }
     }
     return ('+'+this.selectedCountryData.dialCode).length;
