--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -1064,10 +1064,7 @@ Plugin.prototype = {
   isValidNumber: function() {
     var val = $.trim(this.telInput.val()),
       countryCode = (this.options.nationalMode) ? this.selectedCountryData.iso2 : "";
-    if (window.intlTelInputUtils) {
-      return intlTelInputUtils.isValidNumber(val, countryCode);
-    }
-    return false;
+    return (window.intlTelInputUtils ? intlTelInputUtils.isValidNumber(val, countryCode) : null);
   },
 
 
