--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -273,9 +273,10 @@ Plugin.prototype = {
       } else {
         this.countryList.appendTo(this.flagsContainer);
       }
+    } else {
+      // a little hack so we don't break anything
+      this.countryListItems = $();
     }
-
-    this.countryListItems = $();
   },
 
 
@@ -353,9 +354,10 @@ Plugin.prototype = {
   },
 
 
+  // initialise the dropdown listeners
   _initDropdownListeners: function() {
     var that = this;
-    
+
     // hack for input nested inside label: clicking the selected-flag to open the dropdown would then automatically trigger a 2nd click on the input which would close it again
     var label = this.telInput.closest("label");
     if (label.length) {
