--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -24,6 +24,8 @@ var pluginName = "intlTelInput",
     onlyCountries: [],
     // the countries at the top of the list. defaults to united states and united kingdom
     preferredCountries: ["us", "gb"],
+    // display the country dial code next to the flag so it's not part of the typed number
+    separateDialCode: false,
     // specify the path to the libphonenumber script to enable validation/formatting
     utilsScript: ""
   },
@@ -76,6 +78,11 @@ Plugin.prototype = {
     // if in nationalMode, disable options relating to dial codes
     if (this.options.nationalMode) {
       this.options.autoHideDialCode = false;
+    }
+
+    // if separateDialCode then doesn't make sense to A) insert dial code into input (autoHideDialCode), and B) display national numbers (because we're displaying the country dial code next to them)
+    if (this.options.separateDialCode) {
+      this.options.autoHideDialCode = this.options.nationalMode = false;
     }
 
     // we cannot just test screen size as some smartphones/website meta tags will report desktop resolutions
@@ -224,8 +231,15 @@ Plugin.prototype = {
     this.telInput.attr("autocomplete", "off");
 
     // containers (mostly for positioning)
+    var parentClass = "intl-tel-input";
+    if (this.options.allowDropdown) {
+      parentClass += " allow-dropdown";
+    }
+    if (this.options.separateDialCode) {
+      parentClass += " separate-dial-code";
+    }
     this.telInput.wrap($("<div>", {
-      "class": "intl-tel-input"
+      "class": parentClass
     }));
 
     this.flagsContainer = $("<div>", {
@@ -248,7 +262,6 @@ Plugin.prototype = {
       $("<div>", {
         "class": "iti-arrow"
       }).appendTo(selectedFlag);
-      this.telInput.parent().addClass("allow-dropdown");
 
       // country dropdown: preferred countries, then divider, then all countries
       this.countryList = $("<ul>", {
@@ -276,6 +289,12 @@ Plugin.prototype = {
     } else {
       // a little hack so we don't break anything
       this.countryListItems = $();
+    }
+
+    if (this.options.separateDialCode) {
+      this.selectedDialCode = $("<div>", {
+        "class": "selected-dial-code"
+      }).appendTo(selectedFlag);
     }
   },
 
@@ -833,6 +852,11 @@ Plugin.prototype = {
     // update the selected country's title attribute
     var title = (countryCode) ? this.selectedCountryData.name + ": +" + this.selectedCountryData.dialCode : "Unknown";
     this.selectedFlagInner.parent().attr("title", title);
+
+    if (this.options.separateDialCode) {
+      var dialCode = (this.selectedCountryData.dialCode) ? "+" + this.selectedCountryData.dialCode : "";
+      this.selectedDialCode.text(dialCode);
+    }
 
     // and the input's placeholder
     this._updatePlaceholder();
