--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -255,6 +255,12 @@ Plugin.prototype = {
       "class": "iti-flag"
     }).appendTo(selectedFlag);
 
+    if (this.options.separateDialCode) {
+      this.selectedDialCode = $("<div>", {
+        "class": "selected-dial-code"
+      }).appendTo(selectedFlag);
+    }
+
     if (this.options.allowDropdown) {
       // make element focusable and tab naviagable
       selectedFlag.attr("tabindex", "0");
@@ -289,12 +295,6 @@ Plugin.prototype = {
     } else {
       // a little hack so we don't break anything
       this.countryListItems = $();
-    }
-
-    if (this.options.separateDialCode) {
-      this.selectedDialCode = $("<div>", {
-        "class": "selected-dial-code"
-      }).appendTo(selectedFlag);
     }
   },
 
@@ -839,7 +839,7 @@ Plugin.prototype = {
   // select the given flag, update the placeholder and the active list item
   // Note: called from _setInitialState, _updateFlagFromNumber, _selectListItem, setCountry
   _setFlag: function(countryCode, isInit) {
-    var prevCountryCode = (this.selectedCountryData && this.selectedCountryData.iso2) ? this.selectedCountryData.iso2 : "";
+    var prevCountry = (this.selectedCountryData && this.selectedCountryData.iso2) ? this.selectedCountryData : {};
 
     // do this first as it will throw an error and stop if countryCode is invalid
     this.selectedCountryData = (countryCode) ? this._getCountryData(countryCode, false, false) : {};
@@ -854,7 +854,14 @@ Plugin.prototype = {
     this.selectedFlagInner.parent().attr("title", title);
 
     if (this.options.separateDialCode) {
-      var dialCode = (this.selectedCountryData.dialCode) ? "+" + this.selectedCountryData.dialCode : "";
+      var dialCode = (this.selectedCountryData.dialCode) ? "+" + this.selectedCountryData.dialCode : "",
+        parent = this.telInput.parent();
+      if (prevCountry.dialCode) {
+        parent.removeClass("iti-sdc-" + (prevCountry.dialCode.length + 1));
+      }
+      if (dialCode) {
+        parent.addClass("iti-sdc-" + dialCode.length);
+      }
       this.selectedDialCode.text(dialCode);
     }
 
@@ -868,7 +875,7 @@ Plugin.prototype = {
     }
 
     // on change flag, trigger a custom event
-    if (!isInit && prevCountryCode !== countryCode) {
+    if (!isInit && prevCountry.iso2 !== countryCode) {
       this.telInput.trigger("countrychange");
     }
   },
