--- a/src/css/intlTelInput.scss
+++ b/src/css/intlTelInput.scss
@@ -29,13 +29,13 @@ $borderWidth: 1px !default;
 $arrowHeight: 4px !default;
 $arrowWidth: 6px !default;
 $triangleBorder: 3px !default;
-$arrowPadding: 4px !default;
+$arrowPadding: 6px !default;
 $arrowColor: #555 !default;
 
 $inputPadding: 6px !default;
 $selectedFlagWidth: $flagWidth + (2 * $flagPadding) !default;
 $selectedFlagArrowWidth: $flagWidth + $flagPadding + $arrowWidth + (2 * $arrowPadding) !default;
-$selectedFlagArrowDialCodeWidth: $selectedFlagArrowWidth + 11px !default;
+$selectedFlagArrowDialCodeWidth: $selectedFlagArrowWidth + $flagPadding !default;
 
 // image related variables
 $flagsImagePath: "../img/" !default;
@@ -217,6 +217,7 @@ $mobilePopupMargin: 30px;
       margin-left: 0;
     }
     .flag-container {
+      right: auto;
       left: 0;
     }
     .selected-flag {
@@ -240,11 +241,16 @@ $mobilePopupMargin: 30px;
 
     &.separate-dial-code {
       .selected-flag {
+        // now that we have digits in this section, it needs this visual separation
+        background-color: $hoverColor;
+        // for vertical centering
         display: table;
       }
       .selected-dial-code {
+        // for vertical centering
         display: table-cell;
         vertical-align: middle;
+
         padding-left: $flagWidth + $flagPadding;
       }
 
