--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -1163,7 +1163,7 @@ Plugin.prototype = {
   setNumber: function(number, format) {
     // we must update the flag first, which updates this.selectedCountryData, which is used for formatting the number before displaying it
     this._updateFlagFromNumber(number);
-    this._updateValFromNumber(number);
+    this._updateValFromNumber(number, format);
   },
 
 
