--- a/src/js/intlTelInput.js.ejs
+++ b/src/js/intlTelInput.js.ejs
@@ -1193,6 +1193,7 @@ $.fn[pluginName] = function(options) {
   // Is the first parameter an object (options), or was omitted,
   // instantiate a new instance of the plugin.
   if (options === undefined || typeof options === "object") {
+    // collect all of the deferred objects for all instances created with this selector
     var deferreds = [];
     this.each(function() {
       if (!$.data(this, "plugin_" + pluginName)) {
